syntax = "proto3";

option java_multiple_files = true;

package fr.stonehaven.server;
import "server_status.proto";

message Server {
  string id = 1;
  string serverType = 2;
  ServerStatus status = 3;

  string host = 4;
  int32 port = 5;
  int32 gRpcPort = 6;
  string gRpcApiKey = 7;

  int32 players = 8;
  int32 maxPlayers = 9;
}